--- a/umbrella/src/css/parts/_bootstrap.scss
+++ b/umbrella/src/css/parts/_bootstrap.scss
@@ -158,7 +158,7 @@
 .nav-tabs {
     border: none;
 }
-.nk-item-offset .nav-tabs {
+.blk-item-offset .nav-tabs {
     padding-right: 50px;
 }
 .nav-tabs .nav-link,
