--- a/umbrella/src/css/parts/_base.scss
+++ b/umbrella/src/css/parts/_base.scss
@@ -1,6 +1,6 @@
 html,
 body,
-.nk-layout {
+.blk-layout {
     height: 100%;
 }
 
@@ -26,7 +26,7 @@ a:hover {
 }
 
 // page bg video
-.nk-page-background {
+.blk-page-background {
     position: fixed;
     top: 0;
     left: 0;
@@ -47,13 +47,13 @@ a:hover {
 }
 
 // gaps
-.nk-gap,
-.nk-gap-1,
-.nk-gap-2,
-.nk-gap-3,
-.nk-gap-4,
-.nk-gap-5,
-.nk-gap-6 {
+.blk-gap,
+.blk-gap-1,
+.blk-gap-2,
+.blk-gap-3,
+.blk-gap-4,
+.blk-gap-5,
+.blk-gap-6 {
     display: block;
     height: 13px;
     &:after,
@@ -63,29 +63,29 @@ a:hover {
         clear: both;
     }
 }
-.nk-gap-1 {
+.blk-gap-1 {
     height: 20px;
 }
-.nk-gap-2 {
+.blk-gap-2 {
     height: 35px;
 }
-.nk-gap-3 {
+.blk-gap-3 {
     height: 60px;
 }
-.nk-gap-4 {
+.blk-gap-4 {
     height: 80px;
 }
-.nk-gap-5 {
+.blk-gap-5 {
     height: 100px;
 }
-.nk-gap-6 {
+.blk-gap-6 {
     height: 120px;
 }
 
 /* vertical align block */
-.nk-vertical-center,
-.nk-vertical-bottom,
-.nk-vertical-top {
+.blk-vertical-center,
+.blk-vertical-bottom,
+.blk-vertical-top {
     display: table;
     width: 100%;
     height: 100%;
@@ -96,15 +96,15 @@ a:hover {
         vertical-align: middle;
     }
 }
-.nk-vertical-bottom > div {
+.blk-vertical-bottom > div {
     vertical-align: bottom;
 }
-.nk-vertical-top > div {
+.blk-vertical-top > div {
     vertical-align: top;
 }
 
 // code
-.nk-pre {
+.blk-pre {
     position: relative;
     max-height: 400px;
     padding: 40px 100px;
