--- a/umbrella/src/css/parts/_blog.scss
+++ b/umbrella/src/css/parts/_blog.scss
@@ -1,21 +1,21 @@
 // blog posts
-.nk-blog {
+.blk-blog {
     display: block;
 
-    .nk-blog-item {
+    .blk-blog-item {
         display: none;
     }
 
     // rendered texts styles for animate
-    .nk-blog-rendered {
-        .nk-blog-item a span {
+    .blk-blog-rendered {
+        .blk-blog-item a span {
             display: inline-block;
             vertical-align: bottom;
         }
-        .nk-blog-item a > span {
+        .blk-blog-item a > span {
             overflow: hidden;
         }
-        .nk-blog-item {
+        .blk-blog-item {
             position: fixed;
             width: 50%;
             height: 50%;
@@ -95,11 +95,11 @@
 
 
 // single article
-.nk-article-title {
+.blk-article-title {
     color: $color_main;
     margin-bottom: 40px;
 }
-.nk-article-tags {
+.blk-article-tags {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -138,7 +138,7 @@
 
 // comments
 $comments_avatar_width: 60px;
-.nk-comments {
+.blk-comments {
     position: relative;
     z-index: 0;
     padding-top: 40px;
@@ -159,7 +159,7 @@ $comments_avatar_width: 60px;
         z-index: -1;
     }
 
-    .nk-comment {
+    .blk-comment {
         &:after {
             content: '';
             display: table;
@@ -170,13 +170,13 @@ $comments_avatar_width: 60px;
             margin-bottom: 0;
         }
 
-        .nk-comment,
-        + .nk-comment {
+        .blk-comment,
+        + .blk-comment {
             margin-top: 30px;
             clear: both;
         }
 
-        .nk-comment-avatar {
+        .blk-comment-avatar {
             position: relative;
             float: left;
             margin-right: 15px;
@@ -195,11 +195,11 @@ $comments_avatar_width: 60px;
             }
         }
 
-        .nk-comment {
+        .blk-comment {
             margin-left: $comments_avatar_width + 25px;
         }
 
-        .nk-comment-name {
+        .blk-comment-name {
             display: block;
             font-weight: bold;
 
@@ -214,7 +214,7 @@ $comments_avatar_width: 60px;
         }
 
         // comment meta
-        .nk-comment-meta {
+        .blk-comment-meta {
             position: relative;
             margin-bottom: 5px;
 
@@ -224,7 +224,7 @@ $comments_avatar_width: 60px;
                 clear: right;
             }
 
-            .nk-comment-date {
+            .blk-comment-date {
                 display: block;
                 font-size: 12px;
                 opacity: 0.6;
@@ -233,7 +233,7 @@ $comments_avatar_width: 60px;
         }
 
         // reply
-        .nk-comment-reply {
+        .blk-comment-reply {
             position: absolute;
             top: 15px;
             left: 100%;
@@ -256,14 +256,14 @@ $comments_avatar_width: 60px;
 
         // tablet
         @media #{$media_smaller_md} {
-            .nk-comment {
+            .blk-comment {
                 margin-left: 50px;
             }
-            .nk-comment-meta {
+            .blk-comment-meta {
                 padding-top: 9px;
                 margin-bottom: 15px;
             }
-            .nk-comment-text {
+            .blk-comment-text {
                 margin-left: 0;
                 clear: both;
             }
@@ -271,12 +271,12 @@ $comments_avatar_width: 60px;
 
         // mobile
         @media #{$media_smaller_sm} {
-            .nk-comment {
+            .blk-comment {
                 margin-left: 30px;
             }
         }
     }
 }
-.nk-reply {
+.blk-reply {
     margin-top: 40px;
 }
