--- a/umbrella/src/css/parts/_helpers.scss
+++ b/umbrella/src/css/parts/_helpers.scss
@@ -25,53 +25,53 @@
  * Image Helpers
  */
 /* Image Fit */
-.nk-img-fit,
-.nk-img {
+.blk-img-fit,
+.blk-img {
     max-width: 100%;
 }
 @media #{$media_xxs} {
-    .nk-img-fit-xs-down {
+    .blk-img-fit-xs-down {
         max-width: 100%;
     }
 }
 @media #{$media_larger_xs} {
-    .nk-img-fit-sm-up {
+    .blk-img-fit-sm-up {
         max-width: 100%;
     }
 }
 @media #{$media_smaller_xs} {
-    .nk-img-fit-sm-down {
+    .blk-img-fit-sm-down {
         max-width: 100%;
     }
 }
 @media #{$media_larger_sm} {
-    .nk-img-fit-md-up {
+    .blk-img-fit-md-up {
         max-width: 100%;
     }
 }
 @media #{$media_smaller_sm} {
-    .nk-img-fit-md-down {
+    .blk-img-fit-md-down {
         max-width: 100%;
     }
 }
 @media #{$media_larger_md} {
-    .nk-img-fit-lg-up {
+    .blk-img-fit-lg-up {
         max-width: 100%;
     }
 }
 @media #{$media_smaller_md} {
-    .nk-img-fit-lg-down {
+    .blk-img-fit-lg-down {
         max-width: 100%;
     }
 }
 @media #{$media_lg} {
-    .nk-img-fit-xl-up {
+    .blk-img-fit-xl-up {
         max-width: 100%;
     }
 }
 
 /* Image Half */
-.nk-img-half {
+.blk-img-half {
     width: 50%;
 
     &.pull-xs-left {
@@ -81,20 +81,20 @@
         margin-left: 30px;
     }
 
-    &.nk-item-offset {
+    &.blk-item-offset {
         width: 55%;
     }
 
     @media #{$media_smaller_xs} {
         width: 100%;
-        &.nk-item-offset {
+        &.blk-item-offset {
             width: 100%;
         }
     }
 }
 
 /* Margin for Images inside main content */
-.nk-main img {
+.blk-main img {
     margin-top: 10px;
     margin-bottom: 30px;
 }
@@ -103,7 +103,7 @@
 /*
  * Image Stretch
  */
-.nk-img-stretch {
+.blk-img-stretch {
     width: 100%;
 }
 
@@ -221,7 +221,7 @@ $helper-lh: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50;
 /*
  * Inherit Font Family
  */
-.nk-font-inherit {
+.blk-font-inherit {
     font-family: inherit !important;
 }
 
